[package]
name = "ruiping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-openai = "0.29.3"
const_format = "0.2.34"
env_logger = "0.11.8"
grammers-client = "0.7.0"
inquire = "0.8.0"
log = "0.4.28"
rand = "0.9.2"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
